# Blupension-app

./: .gitattributes  .gitignore  Cargo.toml  package-lock.json  project_structure
.trunk/: trunk.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/config/: default.toml  development.toml  production.toml
backend/migrations/: 20231020000000_initial_schema.sql  20240101000000_initial_schema.sql  20240101000001_create_tables.sql  20240101000001_create_users_table.sql  20240101000001_initial_schema.sql  20240101000002_add_indices.sql  20240320000001_create_base_tables.sql  20240320000002_add_indices.sql  20240320000003_optimize_db.sql  20240320000004_add_refresh_tokens.sql  20240320000005_add_missing_tables.sql  20250218165240_update_transactions.sql  20250218170000_add_transaction_fields.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: auth.rs  health.rs  investments.rs  mod.rs  mpesa.rs  responses.rs  transactions.rs  validation.rs
backend/src/api/handlers/: investment.rs  withdrawal.rs
backend/src/auth/: jwt.rs
backend/src/blockchain/: client.rs  mod.rs
backend/src/config/: cors.rs  env.rs  mod.rs  types.rs
backend/src/controllers/: bpt.rs
backend/src/db/: mod.rs  models.rs
backend/src/error/: mod.rs
backend/src/logging/: mod.rs
backend/src/metrics/: collector.rs  mod.rs
backend/src/middleware/: auth.rs  cache.rs  mod.rs  rate_limit.rs  security.rs  validator.rs  versioning.rs
backend/src/models/: auth.rs  investment.rs  mod.rs  transaction.rs
backend/src/monitoring/: mod.rs
backend/src/services/: auth.rs  auth_service.rs  fund_service.rs  investment.rs  investment_service.rs  mod.rs  mpesa.rs  notification_service.rs  portfolio.rs  portfolio_service.rs  risk_service.rs  smile_id.rs  transaction.rs  transaction_service.rs  validation.rs  withdrawal.rs
contracts/: package.json
contracts/src/: lib.rs
contracts/test/: PensionFund.test.ts
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.github/workflows/: deploy.yml
frontend/.next/: trace
frontend/.next/server/: edge-runtime-webpack.js  (+1 more)
frontend/public/: manifest.json
frontend/src/: middleware.ts
migrations/: 20240101000000_initial.sql  initial.sql
src/: error.rs  lib.rs  main.rs
src/ai/: investment_strategy.rs  notification_engine.rs
src/api/: auth.rs  investments.rs  mod.rs  routes.rs  transactions.rs
src/auth/: AuthProvider.tsx  jwt.rs  middleware.rs  mod.rs
src/blockchain/: mod.rs
src/config/: mod.rs  withdrawal_limits.rs
src/contracts/: mod.rs  pension_fund.rs
src/controllers/: mod.rs
src/db/: mod.rs  schema.rs
src/logging/: mod.rs
src/metrics/: mod.rs
src/middleware/: auth.rs
src/models/: investment.rs  mod.rs  transaction.rs  user.rs  wallet.rs
src/routes/: index.tsx
src/services/: bpt_manager.rs  fund_service.rs  investment.rs  investment_service.rs  mod.rs  mpesa_service.rs  notification_service.rs  price_feed.rs  smile_id.rs  stellar.rs  user_service.rs
src/utils/: crypto.rs  format.rs  mod.rs  validation.rs
(+102 files in other folders)
