[package]
name = "blupension"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.36", features = ["full"] }
jsonwebtoken = "8.1"
rust_decimal = "1.30"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "1.0"
env_logger = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
once_cell = "1.8"
dotenv = "0.15"
